Sat Jun  7 17:52:24 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c src/dblib/rpc.c src/dblib/unittests/rpc.c
	* src/tds/convert.c
	- small improvements to style, logging, and error messages

Thu Jun 05 18:21:25 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- fix cursor6 test
	- SQLFetch odbc 2 compliant

Thu Jun 05 18:08:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor6.c(added):
	- added new test

Fri May 30 17:47:59 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/cspublic.h 
	- applied ML patch of 19 May 2008 for BLK_VERSION for sqsh

Wed May 28 23:08:23 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/server/server.c: fix possible NULL access

Wed May 28 22:08:36 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- fix minor memory leaks

Wed May 28 09:41:16 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac src/apps/tsql.c  
	- reset getopt(3) portably

Tue May 27 18:21:46 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h include arpa/inet.h

Tue May 27 10:23:00 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: compile fix
	* src/tds/numeric.c: add test to avoid future buffer overflows

Tue May 27 10:00:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: fix possible buffer overflow

Mon May 26 15:56:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	(mostly from Coverity reports)
	* include/tdsbytes.h: remove warning
	* src/apps/tsql.c src/dblib/bcp.c src/dblib/dblib.c:
	- remove some leaks
	* src/tds/mem.c: avoid deference of null pointer

Wed May 21 23:51:21 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/odbc/unittests/common.c
	* vms/config_h.vms vms/descrip_mms.template
	- applied ML patch from Craig A. Berry

Wed May 21 21:13:31 EDT 2008	JK Lowden <jklowden@freetds.org>
	* TODO doc/api_status.txt src/ctlib/ct.c