@@ -60,7 +60,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: odbc.c,v 1.481 2008/06/05 16:21:54 freddy77 Exp $");
+TDS_RCSID(var, "$Id: odbc.c,v 1.482 2008/06/12 03:10:16 jklowden Exp $");
 
 static SQLRETURN _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
 static SQLRETURN _SQLAllocEnv(SQLHENV FAR * phenv);
@@ -3707,29 +3707,32 @@ SQLRETURN ODBC_API
 SQLFetch(SQLHSTMT hstmt)
 {
 	SQLRETURN ret;
-	SQLULEN  save_sql_desc_array_size;
-	SQLULEN *save_sql_desc_rows_processed_ptr;
-	SQLUSMALLINT *save_sql_desc_array_status_ptr;
-
+	struct {
+		SQLULEN  array_size;
+		SQLULEN *rows_processed_ptr;
+		SQLUSMALLINT *array_status_ptr;
+	} keep;
+	
 	INIT_HSTMT;
 
 	tdsdump_log(TDS_DBG_FUNC, "SQLFetch(%p)\n", hstmt);
 
+	keep.array_size = stmt->ard->header.sql_desc_array_size;
+	keep.rows_processed_ptr = stmt->ird->header.sql_desc_rows_processed_ptr;
+	keep.array_status_ptr = stmt->ird->header.sql_desc_array_status_ptr;
+	
 	if (stmt->dbc->env->attr.odbc_version != SQL_OV_ODBC3) {
-		save_sql_desc_array_size = stmt->ard->header.sql_desc_array_size;
 		stmt->ard->header.sql_desc_array_size = 1;
-		save_sql_desc_rows_processed_ptr = stmt->ird->header.sql_desc_rows_processed_ptr;
 		stmt->ird->header.sql_desc_rows_processed_ptr = NULL;
-		save_sql_desc_array_status_ptr = stmt->ird->header.sql_desc_array_status_ptr;
 		stmt->ird->header.sql_desc_array_status_ptr = NULL;
 	}
 
 	ret = _SQLFetch(stmt, SQL_FETCH_NEXT, 0);
 
 	if (stmt->dbc->env->attr.odbc_version != SQL_OV_ODBC3) {
-		stmt->ard->header.sql_desc_array_size = save_sql_desc_array_size;
-		stmt->ird->header.sql_desc_rows_processed_ptr = save_sql_desc_rows_processed_ptr;
-		stmt->ird->header.sql_desc_array_status_ptr = save_sql_desc_array_status_ptr;
+		stmt->ard->header.sql_desc_array_size = keep.array_size;
+		stmt->ird->header.sql_desc_rows_processed_ptr = keep.rows_processed_ptr;
+		stmt->ird->header.sql_desc_array_status_ptr = keep.array_status_ptr;
 	}
 
 	ODBC_RETURN(stmt, ret);
@@ -4636,13 +4639,14 @@ SQLGetData(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLSMALLINT fCType, SQLPOINTER rgb
 {
 	/* TODO cursors fetch row if needed ?? */
 	TDSCOLUMN *colinfo;
-	TDSRESULTINFO *resinfo;
 	TDSSOCKET *tds;
 	TDS_CHAR *src;
 	int srclen;
 	TDSCONTEXT *context;
 	SQLLEN dummy_cb;
 	int nSybType;
+
+	int extra_bytes = 0;
 
 	INIT_HSTMT;
 
@@ -4684,25 +4688,6 @@ SQLGetData(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLSMALLINT fCType, SQLPOINTER rgb
 	if (colinfo->column_cur_size < 0) {
 		*pcbValue = SQL_NULL_DATA;
 	} else {
-		src = (TDS_CHAR *) colinfo->column_data;
-		if (is_variable_type(colinfo->column_type)) {
-			if (colinfo->column_text_sqlgetdatapos > 0
-			    && colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
-				ODBC_RETURN(stmt, SQL_NO_DATA);
-
-			/* 2003-8-29 check for an old bug -- freddy77 */
-			assert(colinfo->column_text_sqlgetdatapos >= 0);
-			if (is_blob_type(colinfo->column_type))
-				src = ((TDSBLOB *) src)->textvalue;
-			src += colinfo->column_text_sqlgetdatapos;
-			srclen = colinfo->column_cur_size - colinfo->column_text_sqlgetdatapos;
-		} else {
-			if (colinfo->column_text_sqlgetdatapos > 0
-			    && colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
-				ODBC_RETURN(stmt, SQL_NO_DATA);
-
-			srclen = colinfo->column_cur_size;
-		}
 		nSybType = tds_get_conversion_type(colinfo->column_type, colinfo->column_size);
 		if (fCType == SQL_C_DEFAULT)
 			fCType = odbc_sql_to_c_type_default(stmt->ird->records[icol - 1].sql_desc_concise_type);
@@ -4714,12 +4699,129 @@ SQLGetData(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLSMALLINT fCType, SQLPOINTER rgb
 			fCType = stmt->ard->records[icol - 1].sql_desc_concise_type;
 		}
 		assert(fCType);
+
+		src = (TDS_CHAR *) colinfo->column_data;
+		if (is_variable_type(colinfo->column_type)) {
+			int nread = 0;
+			
+			/* 2003-8-29 check for an old bug -- freddy77 */
+			assert(colinfo->column_text_sqlgetdatapos >= 0);
+			if (is_blob_type(colinfo->column_type))
+				src = ((TDSBLOB *) src)->textvalue;
+
+			if (fCType == SQL_C_CHAR && colinfo->column_text_sqlgetdatapos) {
+				TDS_CHAR buf[3];
+				SQLLEN len;
+
+				switch (nSybType) {
+				case SYBLONGBINARY:
+				case SYBBINARY:
+				case SYBVARBINARY:
+				case SYBIMAGE:
+				case XSYBBINARY:
+				case XSYBVARBINARY:
+				case TDS_CONVERT_BINARY:
+					if (colinfo->column_text_sqlgetdatapos % 2) {
+						nread = (colinfo->column_text_sqlgetdatapos - 1) / 2;
+						if (nread >= colinfo->column_cur_size)
+							ODBC_RETURN(stmt, SQL_NO_DATA);
+						
+						if (cbValueMax > 2) {
+							len = convert_tds2sql(context, nSybType, src + nread, 1, fCType, buf, sizeof(buf), NULL);
+							if (len < 2) {
+								if (len < 0) 
+									odbc_convert_err_set(&stmt->errs, len);
+								ODBC_RETURN(stmt, SQL_ERROR);
+							}
+							*(TDS_CHAR *) rgbValue = buf[1];
+							*((TDS_CHAR *) rgbValue + 1) = 0;
+						
+							rgbValue++;
+							cbValueMax--;
+						
+							extra_bytes = 1;
+							nread++;
+
+							if (nread >= colinfo->column_cur_size)
+								ODBC_RETURN_(stmt);
+						} else {
+							if (cbValueMax) 
+								*(TDS_CHAR *) rgbValue = 0;
+							odbc_errs_add(&stmt->errs, "01004", "String data, right truncated");
+							ODBC_RETURN(stmt, SQL_SUCCESS_WITH_INFO);
+						}
+					} else {
+						nread = colinfo->column_text_sqlgetdatapos / 2;
+						if (nread >= colinfo->column_cur_size)
+							ODBC_RETURN(stmt, SQL_NO_DATA);
+					}
+					
+					src += nread;
+					srclen = colinfo->column_cur_size - nread;
+					break;
+				default:
+					if (colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
+						ODBC_RETURN(stmt, SQL_NO_DATA);
+						
+					src += colinfo->column_text_sqlgetdatapos;
+					srclen = colinfo->column_cur_size - colinfo->column_text_sqlgetdatapos;
+
+				}
+			} else if (fCType == SQL_C_BINARY) {
+				switch (nSybType) {
+				case SYBCHAR:
+				case SYBVARCHAR:
+				case SYBTEXT:
+				case XSYBCHAR:
+				case XSYBVARCHAR:
+					nread = (src[0] == '0' && toupper(src[1]) == 'X')? 2 : 0;
+						
+					while ((nread < colinfo->column_cur_size) && (src[nread] == ' ' || src[nread] == '\0')) 
+						nread++;
+
+					nread += colinfo->column_text_sqlgetdatapos * 2;
+					
+					if (nread && nread >= colinfo->column_cur_size)
+						ODBC_RETURN(stmt, SQL_NO_DATA);
+
+					src += nread;
+					srclen = colinfo->column_cur_size - nread;
+					break;
+				default:
+					if (colinfo->column_text_sqlgetdatapos > 0
+					&&  colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
+						ODBC_RETURN(stmt, SQL_NO_DATA);
+						
+					src += colinfo->column_text_sqlgetdatapos;
+					srclen = colinfo->column_cur_size - colinfo->column_text_sqlgetdatapos;
+				}
+			} else {
+				if (colinfo->column_text_sqlgetdatapos > 0
+				&&  colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
+					ODBC_RETURN(stmt, SQL_NO_DATA);
+
+				src += colinfo->column_text_sqlgetdatapos;
+				srclen = colinfo->column_cur_size - colinfo->column_text_sqlgetdatapos;
+			}
+		} else {
+			if (colinfo->column_text_sqlgetdatapos > 0
+			&&  colinfo->column_text_sqlgetdatapos >= colinfo->column_cur_size)
+				ODBC_RETURN(stmt, SQL_NO_DATA);
+
+			srclen = colinfo->column_cur_size;
+		}
+
 		*pcbValue = convert_tds2sql(context, nSybType, src, srclen, fCType, (TDS_CHAR *) rgbValue, cbValueMax, NULL);
 		if (*pcbValue < 0) {
 			odbc_convert_err_set(&stmt->errs, *pcbValue);
 			ODBC_RETURN(stmt, SQL_ERROR);
 		}
-
+		
+		if (extra_bytes) {
+			colinfo->column_text_sqlgetdatapos += extra_bytes;
+			*pcbValue += extra_bytes;
+		}
+		
 		if (is_variable_type(colinfo->column_type) && (fCType == SQL_C_CHAR || fCType == SQL_C_BINARY)) {
 			/* calculate how many bytes were read */
 			int remaining = cbValueMax;
